# loopsmith

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: acceptance.md  codex-loop-best-practices.md  loopsmith-best-practices.md  release.md  scorecard.md
docs/superpowers/plans/: 2026-06-30-codex-loop-implementation-plan.md  2026-06-30-loopsmith-implementation-plan.md  2026-06-30-loopsmith-vibecoding-workflow-plan.md  2026-07-01-loopsmith-95-workflow-plan.md
examples/: multi-review-loop.json  plaintext-loop.json
scripts/: package-release.sh
site/: index.html
src/: codex_exec.rs  config.rs  hooks.rs  lib.rs  main.rs  record.rs  run_state.rs  runner.rs  schema.rs  verify.rs  workspace.rs
tests/: cli.rs  hooks.rs  workflow.rs
