[package]
name = "codex-loop"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Auditable iterative repair loops driven by Codex CLI"
license = "MIT"

[[bin]]
name = "codex-loop"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.10"
